Changes in Version 0.7.3 (2013-03-06)
---------------------------------------------------------

BUG FIXES

* fix for `names<-.BibEntry`
* fix for `print.BibEntry` when entry has urldate field but no url field
* Correct some documentation typos
* Fix pmidrelated field when `batch.mode = FALSE` in `GetPubMedRelated`
* Fix `LookupPubMedID` when specify `index` argument